--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -135,6 +135,11 @@
                 <version>${opensaml.version}</version>
                 <artifactId>opensaml-profile-api</artifactId>
             </dependency>
+            <dependency>
+                <groupId>net.shibboleth.idp</groupId>
+                <version>${shib.idp.version}</version>
+                <artifactId>idp-attribute-filter-api</artifactId>
+            </dependency>
             <!-- Test Dependencies -->
             <dependency>
                 <groupId>org.opensaml</groupId>
