mod_auth client to request all standard scopes

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -380,7 +380,7 @@
          OIDCCryptoPassphrase secret
          OIDCMetadataDir /var/cache/httpd/mod_auth_openidc/metadata
          OIDCResponseType "code"
-         OIDCScope "openid email"
+         OIDCScope "openid profile email address phone"
          <Location /protected/>
              authtype openid-connect
              require valid-user
