OAuth 2.0 Token Revocation

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -23,6 +23,9 @@
 
 - name: Ensure "{{ idp_home }}/flows/oidc/discovery" dir exists
   file: path="{{ idp_home }}/flows/oidc/discovery" state=directory
+  
+- name: Ensure "{{ idp_home }}/flows/oauth2/revocation" dir exists
+  file: path="{{ idp_home }}/flows/oauth2/revocation" state=directory
 
 - name: Ensure "{{ idp_home }}/static" dir exists
   file: path="{{ idp_home }}/static/" state=directory
@@ -55,6 +58,8 @@
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/webfinger/oidc-beans.xml", dest: "{{ idp_home }}/flows/oidc/webfinger/oidc-beans.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/discovery/discovery-flow.xml", dest: "{{ idp_home }}/flows/oidc/discovery/discovery-flow.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oidc/discovery/discovery-beans.xml", dest: "{{ idp_home }}/flows/oidc/discovery/discovery-beans.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oauth2/revocation/revocation-flow.xml", dest: "{{ idp_home }}/flows/oauth2/revocation/revocation-flow.xml" }
+    - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/flows/oauth2/revocation/revocation-beans.xml", dest: "{{ idp_home }}/flows/oauth2/revocation/revocation-beans.xml" }
     - { src: "{{ playbook_dir }}/idp-oidc-extension-impl/src/main/resources/views/oidc-error.vm", dest: "{{ idp_home }}/views/oidc/authorize-error.vm" }
 
 - name: Copy selected JARs for building new idp.war
