initial work on creating installable archive file

--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -51,6 +51,7 @@
     <modules>
         <module>../idp-oidc-extension-api</module>
         <module>../idp-oidc-extension-impl</module>
+        <module>../idp-oidc-extension-distribution</module>
     </modules>
     <dependencyManagement>
         <dependencies>
